--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -37,20 +37,20 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/dylan-kreth.jpg" alt="President" class="officer-pic">
+              <img src="../../../assets/officer-pics/brian-doupnik.jpg" alt="President" class="officer-pic">
             </div>
             <br>
-            <p class="title tile-title">Dylan Kreth</p>
+            <p class="title tile-title">Brian Doupnik</p>
             <p class="subtitle">President</p>
           </div>
         </article>
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/chijindu-iheanacho.jpg" alt="Vice President" class="officer-pic">
+              <img src="../../../assets/officer-pics/patrick-soisson.jpg" alt="Vice President" class="officer-pic">
             </div>
             <br>
-            <p class="title tile-title">Chijindu Iheanacho</p>
+            <p class="title tile-title">Patrick Soisson</p>
             <p class="subtitle">Vice President</p>
           </div>
         </article>
@@ -61,7 +61,7 @@
             </div>
             <br>
             <p class="title tile-title">Julia LaFond</p>
-            <p class="subtitle">Prayer Head</p>
+            <p class="subtitle">Bible Study Head</p>
           </div>
         </article>
         <article class="tile is-child card">
@@ -70,38 +70,28 @@
               <img src="../../../assets/officer-pics/leo-dobson.jpg" alt="Speaker Head" class="officer-pic">
             </div>
             <br>
-            <p class="title tile-title">Leo Dobson</p>
+            <p class="title tile-title">Joseph Krueger</p>
             <p class="subtitle">Speaker Head</p>
           </div>
         </article>
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/patrick-soisson.jpg" alt="Social Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/josh-guzman.jpg" alt="Social Head" class="officer-pic">
             </div>
             <br>
-            <p class="title tile-title">Patrick Soisson</p>
+            <p class="title tile-title">Josh Guzman</p>
             <p class="subtitle">Social Head</p>
           </div>
         </article>
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/josh-guzman.png" alt="Service Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/kaitlin-colby.png" alt="Service Head" class="officer-pic">
             </div>
             <br>
-            <p class="title tile-title">Josh Guzman</p>
+            <p class="title tile-title">Kaitlin Colby</p>
             <p class="subtitle">Service Head</p>
-          </div>
-        </article>
-        <article class="tile is-child card">
-          <div class="officer">
-            <div class="crop-image">
-              <img src="../../../assets/officer-pics/kevin-chen.jpg" alt="Tech Head" class="officer-pic">
-            </div>
-            <br>
-            <p class="title tile-title">Kevin Chen</p>
-            <p class="subtitle">Tech Head</p>
           </div>
         </article>
         <article class="tile is-child card">
@@ -122,7 +112,7 @@
               <img src="../../../assets/officer-pics/kalebtina-asare.jpg" alt="WSG Chair" class="officer-pic">
             </div>
             <br>
-            <p class="title tile-title">Kalebtina Asare-Frimpong</p>
+            <p class="title tile-title">Lydia Berger</p>
             <p class="subtitle">WSG Chair</p>
           </div>
         </article>
@@ -133,26 +123,26 @@
             </div>
             <br>
             <p class="title tile-title">Montgomery Flores</p>
-            <p class="subtitle">MSG Chair</p>
+            <p class="subtitle">Co-MSG Chair</p>
           </div>
         </article>
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/priyanka-prem.jpg" alt="Media Chair" class="officer-pic">
+              <img src="../../../assets/officer-pics/lillian-turner.jpg" alt="Media Chair" class="officer-pic">
             </div>
             <br>
-            <p class="title tile-title">Priyanka Prem</p>
+            <p class="title tile-title">Lillian Turner</p>
             <p class="subtitle">Media Chair</p>
           </div>
         </article>
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/kaitlin-colby.jpg" alt="Transportation Chair" class="officer-pic">
+              <img src="../../../assets/officer-pics/kevin-chen.jpg" alt="Transportation Chair" class="officer-pic">
             </div>
             <br>
-            <p class="title tile-title">Kaitlin Colby</p>
+            <p class="title tile-title">Kevin Chen</p>
             <p class="subtitle">Transportation Chair</p>
           </div>
         </article>
@@ -163,7 +153,7 @@
             </div>
             <br>
             <p class="title tile-title">Preston Glenn</p>
-            <p class="subtitle">Sports Chair</p>
+            <p class="subtitle">Co-MSG Chair</p>
           </div>
         </article>
         <article class="tile is-child card">
@@ -173,17 +163,17 @@
             </div>
             <br>
             <p class="title tile-title">Ike Ekwueme</p>
-            <p class="subtitle">Music Ministry Chair</p>
+            <p class="subtitle">Advertising Chair</p>
           </div>
         </article>
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/joseph-krueger.jpg" alt="KoC Liaison" class="officer-pic">
+              <img src="../../../assets/officer-pics/john-oleary.jpg" alt="KoC Liaison" class="officer-pic">
             </div>
             <br>
-            <p class="title tile-title">Joseph Krueger</p>
-            <p class="subtitle">KoC Liaison</p>
+            <p class="title tile-title">Deacon John O'Leary</p>
+            <p class="subtitle">Chaplain</p>
           </div>
         </article>
       </div>
