Made some corrections

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -57,7 +57,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/julia-lafond.jpg" alt="Prayer Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/julia-lafond.jpg" alt="Bible Study Head" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Julia LaFond</p>
@@ -77,7 +77,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/josh-guzman.jpg" alt="Social Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/josh-guzman.png" alt="Social Head" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Josh Guzman</p>
@@ -87,7 +87,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/kaitlin-colby.png" alt="Service Head" class="officer-pic">
+              <img src="../../../assets/officer-pics/kaitlin-colby.jpg" alt="Service Head" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Kaitlin Colby</p>
@@ -129,11 +129,11 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/lillian-turner.jpg" alt="Media Chair" class="officer-pic">
+              <img src="../../../assets/officer-pics/lillian-turner.jpg" alt="Social Media Head" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Lillian Turner</p>
-            <p class="subtitle">Media Chair</p>
+            <p class="subtitle">Social Media Head</p>
           </div>
         </article>
         <article class="tile is-child card">
@@ -149,7 +149,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/preston-glenn.jpg" alt="Sports Chair" class="officer-pic">
+              <img src="../../../assets/officer-pics/preston-glenn.jpg" alt="MSG Chair" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Preston Glenn</p>
@@ -159,7 +159,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/ike-ekwueme.jpg" alt="Music Ministry Chair" class="officer-pic">
+              <img src="../../../assets/officer-pics/ike-ekwueme.jpg" alt="Advertising Chair" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Ike Ekwueme</p>
@@ -169,7 +169,7 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/john-oleary.jpg" alt="KoC Liaison" class="officer-pic">
+              <img src="../../../assets/officer-pics/john-oleary.jpg" alt="Chaplain" class="officer-pic">
             </div>
             <br>
             <p class="title tile-title">Deacon John O'Leary</p>
