Tweaked store look and feel

--- a/src/app/components/store/store.component.html
+++ b/src/app/components/store/store.component.html
@@ -3,6 +3,14 @@
     href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
     rel="stylesheet"
   />
+  <link
+    href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+    rel="stylesheet"
+  />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
@@ -19,15 +27,23 @@
     <!--Body-->
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title hero-title">
-          NCM Store
-        </h1>
+        <b
+          ><h1
+            class="title hero-title"
+            style="font-size: 48px; font-family: 'Montserrat'"
+          >
+            Store
+          </h1></b
+        >
+        <br />
         <div class="tile is-ancestor">
           <div class="tile is-vertical is-parent">
             <div class="tile is-child box item">
               <p class="title">T-Shirt</p>
               <img class="item-img" src="../../../assets/store/ncmshirt.jpg" />
-              <p>Price: $10</p>
+              <b
+                ><p style="font-size: 18px; font-family: PT Mono;">$10.00</p></b
+              >
               <br />
               <button
                 onclick="window.location='https:\/\/docs.google.com/forms/d/e/1FAIpQLSdtFhp7zoDLx86NfgyMcdcyNmso9-fs0phnKNF5k61HL8G9Ug/viewform';"
@@ -41,7 +57,9 @@
             <div class="tile is-child box item" style="display: none;">
               <p class="title">T-Shirt</p>
               <img class="item-img" src="../../../assets/store/ncmshirt.jpg" />
-              <p>Price: $10</p>
+              <b
+                ><p style="font-size: 18px; font-family: PT Mono;">$10.00</p></b
+              >
               <br />
               <button
                 onclick="window.location='https:\/\/docs.google.com/forms/d/e/1FAIpQLSdtFhp7zoDLx86NfgyMcdcyNmso9-fs0phnKNF5k61HL8G9Ug/viewform';"
