Updated COVID-19 statement

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -46,12 +46,10 @@
   <button class="delete" (click)="closeNotification()"></button>
   <b>Important announcement:</b>
   For those of you who are unaware, the President of UT Dallas, Dr. Richard
-  Benson, just published a notice extending the period of spring break and
-  declaring a move to online classes for the rest of the semester, pending
-  further notice. Among the things to note is that all campus events are
-  canceled, effective immediately. Please rest assured that we are working
-  quickly and efficiently to implement a solution, and communicate with the
-  university to determine what this means for the future of NCM Events this
-  semester. We will keep you informed as further information becomes available,
-  and you will all be in our prayers.
+  Benson, published a notice declaring a move to online classes for the rest of
+  the semester. Among the things to note is that all campus events are canceled,
+  effective immediately. Because of this, all NCM events for the rest of the
+  semester will be done remotely, through video calls. Join our Slack if you are
+  interested in joining in. Thank you for being involved with us, and let's
+  finish the semester strong! Whoosh!
 </div>
