Made tweaks and changed VP

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,30 +1,43 @@
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link
+    href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
+    rel="stylesheet"
+  />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body class="has-navbar-fixed-top">
-
   <!--Navbar-->
   <app-navbar></app-navbar>
 
   <!--Hero with header and footer-->
   <section class="hero is-info is-bold is-fullheight has-background">
-    <img class="hero-background is-transparent" src="../../../assets/page-covers/about-ncm-cover.jpg">
+    <img
+      class="hero-background is-transparent"
+      src="../../../assets/page-covers/about-ncm-cover.jpg"
+    />
     <!--Body-->
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title">We are the largest community for Catholics at UT Dallas.</h1>
-        <br>
-        <br>
-        <br>
-        <h2 class="subtitle">As Catholics at the University of Texas at Dallas, we seek to build up the Catholic
-          community, reach out to Catholics on campus, and be the presence of Christ to those around us. To that
-          purpose, we seek to sponsor events that proclaim the truths of our faith, offer opportunity for fellowship,
-          and draw students deeper into a life of prayer, sacraments, and a relationship with Christ and His Church. We
-          use our resources of time, talent, and treasure to promote and implement our missions and events.</h2>
-        <button class="button is-white is-outlined overflow"><i class="fas fa-angle-down"></i>&nbsp;Meet the
-          Officers</button>
+        <h1 class="title">
+          We are the largest community for Catholics at UT Dallas.
+        </h1>
+        <br />
+        <br />
+        <br />
+        <h2 class="subtitle">
+          As Catholics at the University of Texas at Dallas, we seek to build up
+          the Catholic community, reach out to Catholics on campus, and be the
+          presence of Christ to those around us. To that purpose, we seek to
+          sponsor events that proclaim the truths of our faith, offer
+          opportunity for fellowship, and draw students deeper into a life of
+          prayer, sacraments, and a relationship with Christ and His Church. We
+          use our resources of time, talent, and treasure to promote and
+          implement our missions and events.
+        </h2>
+        <button class="button is-white is-outlined overflow">
+          <i class="fas fa-angle-down"></i>&nbsp;Meet the Officers
+        </button>
       </div>
     </div>
   </section>
@@ -37,9 +50,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/brian-doupnik.jpg" alt="President" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/brian-doupnik.jpg"
+                alt="President"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Brian Doupnik</p>
             <p class="subtitle">President</p>
           </div>
@@ -47,29 +64,27 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/patrick-soisson.jpg" alt="Vice President" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/julia-lafond.jpg"
+                alt="Vice President"
+                class="officer-pic"
+              />
             </div>
-            <br>
-            <p class="title tile-title">Patrick Soisson</p>
+            <br />
+            <p class="title tile-title">Julia LaFond</p>
             <p class="subtitle">Vice President</p>
           </div>
         </article>
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/julia-lafond.jpg" alt="Bible Study Head" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/joseph-krueger.jpg"
+                alt="Speaker Head"
+                class="officer-pic"
+              />
             </div>
-            <br>
-            <p class="title tile-title">Julia LaFond</p>
-            <p class="subtitle">Bible Study Head</p>
-          </div>
-        </article>
-        <article class="tile is-child card">
-          <div class="officer">
-            <div class="crop-image">
-              <img src="../../../assets/officer-pics/joseph-krueger.jpg" alt="Speaker Head" class="officer-pic">
-            </div>
-            <br>
+            <br />
             <p class="title tile-title">Joseph Krueger</p>
             <p class="subtitle">Speaker Head</p>
           </div>
@@ -77,9 +92,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/josh-guzman.png" alt="Social Head" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/josh-guzman.png"
+                alt="Social Head"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Josh Guzman</p>
             <p class="subtitle">Social Head</p>
           </div>
@@ -87,9 +106,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/kaitlin-colby.jpg" alt="Service Head" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/kaitlin-colby.jpg"
+                alt="Service Head"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Kaitlin Colby</p>
             <p class="subtitle">Service Head</p>
           </div>
@@ -97,9 +120,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/summer-brown.jpg" alt="Outreach Head" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/summer-brown.jpg"
+                alt="Outreach Head"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Summer Brown</p>
             <p class="subtitle">Outreach Head</p>
           </div>
@@ -109,9 +136,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/lydia-berger.jpg" alt="WSG Chair" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/lydia-berger.jpg"
+                alt="WSG Chair"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Lydia Berger</p>
             <p class="subtitle">WSG Chair</p>
           </div>
@@ -119,9 +150,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/montgomery-flores.jpg" alt="MSG Chair" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/montgomery-flores.jpg"
+                alt="MSG Chair"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Montgomery Flores</p>
             <p class="subtitle">Co-MSG Chair</p>
           </div>
@@ -129,9 +164,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/lillian-turner.jpg" alt="Social Media Head" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/lillian-turner.jpg"
+                alt="Social Media Head"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Lillian Turner</p>
             <p class="subtitle">Social Media Head</p>
           </div>
@@ -139,9 +178,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/kevin-chen.jpg" alt="Transportation Chair" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/kevin-chen.jpg"
+                alt="Transportation Chair"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Kevin Chen</p>
             <p class="subtitle">Transportation Chair</p>
           </div>
@@ -149,9 +192,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/preston-glenn.jpg" alt="MSG Chair" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/preston-glenn.jpg"
+                alt="MSG Chair"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Preston Glenn</p>
             <p class="subtitle">Co-MSG Chair</p>
           </div>
@@ -159,9 +206,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/ike-ekwueme.jpg" alt="Advertising Chair" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/ike-ekwueme.jpg"
+                alt="Advertising Chair"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Ike Ekwueme</p>
             <p class="subtitle">Advertising Chair</p>
           </div>
@@ -169,9 +220,13 @@
         <article class="tile is-child card">
           <div class="officer">
             <div class="crop-image">
-              <img src="../../../assets/officer-pics/john-oleary.jpg" alt="Chaplain" class="officer-pic">
+              <img
+                src="../../../assets/officer-pics/john-oleary.jpg"
+                alt="Chaplain"
+                class="officer-pic"
+              />
             </div>
-            <br>
+            <br />
             <p class="title tile-title">Deacon John O'Leary</p>
             <p class="subtitle">Chaplain</p>
           </div>
