--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -42,14 +42,9 @@
 </nav>
 
 <!--Emergency message for COVID-19-->
-<div id="notifyBanner" class="notification is-danger is-light">
+<div id="notifyBanner" class="notification is-info is-light">
   <button class="delete" (click)="closeNotification()"></button>
-  <b>Important announcement:</b>
-  For those of you who are unaware, the President of UT Dallas, Dr. Richard
-  Benson, published a notice declaring a move to online classes for the rest of
-  the semester. Among the things to note is that all campus events are canceled,
-  effective immediately. Because of this, all NCM events for the rest of the
-  semester will be done remotely, through video calls. Join our Slack if you are
-  interested in joining in. Thank you for being involved with us, and let's
-  finish the semester strong! Whoosh!
+  <b>Summer events:</b>
+  Happy summer, Catholic Comets! We will be having events over the summer, so come join us if you're interested!
+  Join the Slack channel for more information by clicking on the "Get Involved" tab.
 </div>
