--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -41,10 +41,9 @@
   </div>
 </nav>
 
-<!--Emergency message for COVID-19-->
+<!--Website moved notification-->
 <div id="notifyBanner" class="notification is-info is-light">
   <button class="delete" (click)="closeNotification()"></button>
-  <b>Summer events:</b>
-  Happy summer, Catholic Comets! We will be having events over the summer, so come join us if you're interested!
-  Join the Slack channel for more information by clicking on the "Get Involved" tab.
+  <b>New website:</b>
+  Hey, Catholic Comets! The NCM website has moved! New website: https://newmanutd.wixsite.com/ncmutd
 </div>
